# Physical-AI-Book

./: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  rag_chatbot_implementation_tasks.md  sidebars.ts
.claude/: settings.local.json
.claude-code-router/: config.json
.specify/memory/: constitution.md
backend/: .env.example  README.md  config.py  document_crawler.py  embedding_generator.py  pyproject.toml  rag_orchestrator.py  requirements.txt  vector_storage.py
backend/app/: main.py
backend/app/models/: chat.py  content.py  session.py
backend/app/routes/: chat.py  ingestion.py
backend/app/services/: chat_service.py  ingestion.py  metadata_db.py  vector_db.py
backend/app/utils/: content_parser.py  text_chunker.py
blog/: authors.yml
docs/: api-reference.md  docusaurus.config.js  intro.md  sidebars.js
docs/chapters/: index.md
docs/chapters/chapter-1/: lesson-1.md  lesson-2.md  lesson-3.md
docs/chapters/module-2/: index.md
docs/chapters/module-3/: index.md
docs/chapters/module-4/: index.md
docs/examples/: index.md
docs/examples/lesson-1-exercise/: robot-model.md
docs/examples/lesson-2-exercise/: motion-planning.py
docs/examples/lesson-2-gazebo-exercise/: README.md
docs/examples/lesson-3-exercise/: sensor-fusion.py
docs/examples/lesson-3-unity-exercise/: README.md
docs/reference/: glossary.md  quick-reference.md
frontend/docs/chapters/: intro.md
specs/001-physical-ai-book/: plan.md  spec.md  tasks.md
specs/002-rag-chatbot/: plan.md  spec.md  tasks.md
src/components/: HomepageFeatures.tsx
(+46 files in other folders)
