[project]
name = "backend"
version = "0.1.0"
description = "Backend for Physical AI Book RAG system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-frontmatter>=1.0.0",
    "cohere>=5.0.0",
    "qdrant-client>=1.10.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
]
